fixing spacing, adding back arrow

--- a/pokemonMain/pokemon.css
+++ b/pokemonMain/pokemon.css
@@ -28,11 +28,19 @@ p {
     font-weight: bold;
 }
 
+.backArrow {
+    background-color: transparent;
+    border: none;
+    margin: 15px;
+    position: absolute;
+}
+
+.backArrow img {
+    height: 50px;
+}
 
 #logo {
-    width: 290px;
-    height: 140px;
-    margin: 15px;
+    height: 100px;
 }
 
 header {
@@ -58,7 +66,10 @@ main {
     left: 0;
 }
 
+
+
 #buttons {
+    /* width: 100%; */
     display: flex;
     justify-content: center;
     padding: 1rem;
@@ -72,13 +83,14 @@ main {
     border-radius: 1rem;
     padding: 15px;
     font-size: 1rem;
+    cursor: pointer;
 }
 
 .poketainer {
     padding: 0px 10px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: left;
 }
 
 .scene {
@@ -103,6 +115,8 @@ main {
 
 .card_face {
     position: absolute;
+    left: 0;
+    top: 50px;
     width: 100%;
     height: 100%;
     color: #aaa;
